force-app/main/default/objects/JBCXM__ApplicationSettings__c/JBCXM__ApplicationSettings__c.object-meta.xml
<CustomObject>
    <label>Application Settings</label>
    <nameField>
        <label>Application Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>