force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__AccessKeys__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AccessKeys__c</fullName>
    <label>AccessKeys</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>