force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__AccountMapField__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AccountMapField__c</fullName>
    <description>This field is used in API to get the account Id for storing in objects &quot;SurveyResponse&quot;, &quot;User Adoption&quot; etc</description>
    <inlineHelpText>Account Mapping Field is used to map to the account record that is being referred to in JBara API calls.</inlineHelpText>
    <label>AccountMapField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>