force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__AdoptionAggregationColumns__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AdoptionAggregationColumns__c</fullName>
    <description>It specifies the Adoption Aggregation column type. For example Sum, Avg, Count of same column or other.</description>
    <label>Adoption Aggregation Columns</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>