force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__AdoptionAggregationType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AdoptionAggregationType__c</fullName>
    <description>It Specifies the Aggregation type, For example By User, By Account, By Instance, By Instance and User.</description>
    <label>Adoption Aggregation Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>