force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__AdoptionGranularity__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AdoptionGranularity__c</fullName>
    <defaultValue>&quot;MONTHLY&quot;</defaultValue>
    <label>Adoption Granularity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>