force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__AdoptionMeasureColMap__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AdoptionMeasureColMap__c</fullName>
    <description>It stores the map between the adoption measure and column.</description>
    <label>Adoption Measure Column Map</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>