force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__AlertAssociated__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AlertAssociated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you want to associate Alerts to another object other than Account.</inlineHelpText>
    <label>Alert Associated</label>
    <type>Checkbox</type>
</CustomField>