force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__BOPChurnAmounts__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__BOPChurnAmounts__c</fullName>
    <label>BOP Churn Amounts</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>