force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__CalculateASVByTerm__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CalculateASVByTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to calculate the ASV using term if term is less than 12.</description>
    <label>Calculate ASV By Term</label>
    <type>Checkbox</type>
</CustomField>