force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__CaseAccountField__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CaseAccountField__c</fullName>
    <label>CaseAccountField</label>
    <length>80</length>
    <type>Text</type>
</CustomField>