force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__CaseObjectName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CaseObjectName__c</fullName>
    <label>CaseObjectName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>