force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__ChurnByBOP__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ChurnByBOP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Calculate churn based on BOP</inlineHelpText>
    <label>Churn By BOP</label>
    <type>Checkbox</type>
</CustomField>