force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__CockpitConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CockpitConfig__c</fullName>
    <label>Cockpit Configuration</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>