force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__CTA_Association_Metadata__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CTA_Association_Metadata__c</fullName>
    <description>Stores CTA association metadata</description>
    <label>CTA Association Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>