force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__DefaultTemplate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultTemplate__c</fullName>
    <label>Default Template</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>