force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__GainsightVersion__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GainsightVersion__c</fullName>
    <description>This will be used to record Gainsight version being deployed onto the org.</description>
    <label>Gainsight app version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>