force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__IsCaseEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsCaseEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show cases from case object.</description>
    <label>IsCaseEnabled</label>
    <type>Checkbox</type>
</CustomField>