force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__IsLRMEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsLRMEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLRMEnabled</label>
    <type>Checkbox</type>
</CustomField>