force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__IsNSEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsNSEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNSEnabled</label>
    <type>Checkbox</type>
</CustomField>