force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__IsNSExportEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsNSExportEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNSExportEnabled</label>
    <type>Checkbox</type>
</CustomField>