force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__IsNSReportsEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsNSReportsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNSReportsEnabled</label>
    <type>Checkbox</type>
</CustomField>