force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__LicensedUserNotInAdoptionGraph__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LicensedUserNotInAdoptionGraph__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to not show license user in adoption graph</description>
    <label>LicensedUser Not In Adoption Graph</label>
    <type>Checkbox</type>
</CustomField>