force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__LicensedUserNotInAdoptionGrid__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LicensedUserNotInAdoptionGrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to not show license user in adoption grid</description>
    <label>LicensedUser Not In Adoption Grid</label>
    <type>Checkbox</type>
</CustomField>