force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__MigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MigrationStatus__c</fullName>
    <label>Migration Status</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>