force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NPSAssociated__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSAssociated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to show label from associated object while showing NPS</description>
    <inlineHelpText>Check if you want to associate NPS to another object other than Account.</inlineHelpText>
    <label>NPS Associated</label>
    <type>Checkbox</type>
</CustomField>