force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NPSAssociatedObject__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSAssociatedObject__c</fullName>
    <description>This will store related object name against which survey response need to be added</description>
    <inlineHelpText>Select the object that will be Associated with NPS Response.</inlineHelpText>
    <label>NPSAssociated Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>