force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NPSAssociatedObjectDisplay__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSAssociatedObjectDisplay__c</fullName>
    <description>This will be used to get display label while showing nps responses</description>
    <inlineHelpText>Select the Display Field that should be used in all the reports after Associating NPS with an Object.</inlineHelpText>
    <label>NPS Associated Object Display</label>
    <length>100</length>
    <type>Text</type>
</CustomField>