force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NPSAssociatedObjectDisplayName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSAssociatedObjectDisplayName__c</fullName>
    <description>What is the Display field name that should be used in Reports. For eg: (&apos;Opportunity Name&apos; if The name within the Opportunity object is associated with NPS)</description>
    <inlineHelpText>What is the Display field name that should be used in Reports. For eg: (&apos;Opportunity Name&apos; if The name within the Opportunity object is associated with NPS)</inlineHelpText>
    <label>NPS Associated Object Display Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>