force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NPSAssociatedObjectKey__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSAssociatedObjectKey__c</fullName>
    <description>This will be used to record key column based on which need to associated object id</description>
    <inlineHelpText>This is usually not entered from the UI. This is the Record ID of the object that is associated to this NPS Response.</inlineHelpText>
    <label>NPS Associated Object Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>