force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NSChecksConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NSChecksConfig__c</fullName>
    <label>NS Checks Config</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>