force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NSColumnMap__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NSColumnMap__c</fullName>
    <description>This is used to maintain column mapping between usage measure and ns measure</description>
    <label>NS Column Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>