force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NSDrillDownConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NSDrillDownConfig__c</fullName>
    <label>NS Drilldown Configuartion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>