force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__NSURL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NSURL__c</fullName>
    <label>NS URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>