force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__OpportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OpportunityCloseDate__c</fullName>
    <description>This is used for Opportunity validation.</description>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>