force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__OpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OpportunityStageName__c</fullName>
    <description>This is used for validate the Opportunity stage name.</description>
    <label>Opportunity Stage Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>