force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__PageSize__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PageSize__c</fullName>
    <description>To hold the page sizes of grids across the app.</description>
    <label>PageSize</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>