force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__RelationshipConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelationshipConfig__c</fullName>
    <label>RelationshipConfig</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>