force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__RenewalBasedChurn__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RenewalBasedChurn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show churn calculation based on the renewal information or not.</description>
    <label>Show Renewal based churn</label>
    <type>Checkbox</type>
</CustomField>