force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__RenewalDownsellInChurn__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RenewalDownsellInChurn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to consider renewal with downsell in churn.</inlineHelpText>
    <label>Renewal Downsell In Churn</label>
    <type>Checkbox</type>
</CustomField>