force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__RevenueBand__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RevenueBand__c</fullName>
    <defaultValue>&apos;[]&apos;</defaultValue>
    <description>This is used to store the list of Revenue Band configuration details. For example the config string look like the bellow String.
&apos;[{&quot;Name&quot;:&quot;Brand1&quot;, &quot;Min&quot;:0, &quot;Max&quot;:1000},{&quot;Name&quot;:&quot;Brand1&quot;, &quot;Min&quot;:1001, &quot;Max&quot;:3000}]&apos;.</description>
    <label>Revenue Band Config</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>