force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__SFTaskAssociated__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SFTaskAssociated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFTask Associated</label>
    <type>Checkbox</type>
</CustomField>