force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__Stats__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Stats__c</fullName>
    <label>Statistics</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>