force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__TaskFields__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskFields__c</fullName>
    <label>Task Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>