force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__TransactionAssociated__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TransactionAssociated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you want to associate Transactions to another object other than Account.</inlineHelpText>
    <label>Transaction Associated</label>
    <type>Checkbox</type>
</CustomField>