force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__UsageUtilizationCalc__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UsageUtilizationCalc__c</fullName>
    <label>UsageUtilizationCalc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>