force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__UsesEndDateAsWeekName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UsesEndDateAsWeekName__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to identify the week label based on the start day or end day of week</description>
    <label>Uses week end date as name of week</label>
    <type>Checkbox</type>
</CustomField>