force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__WeekStartsOn__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__WeekStartsOn__c</fullName>
    <description>This will stores the start day of  week. (This field should contains only week days)</description>
    <label>Week Starts On</label>
    <length>40</length>
    <type>Text</type>
</CustomField>