force-app/main/default/objects/JBCXM__ApplicationSettings__c/fields/JBCXM__WigetConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__WigetConfig__c</fullName>
    <label>WigetConfig</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>